--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,3 +32,18 @@ jobs:
         with:
           name: KerstbusSync
           path: KerstbusSync.exe
+      
+      - name: Get version
+        id: version
+        shell: pwsh
+        run: |
+          $version = Get-Date -Format "yyyy.MM.dd.HHmm"
+          echo "version=$version" >> $env:GITHUB_OUTPUT
+      
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ steps.version.outputs.version }}
+          name: Release v${{ steps.version.outputs.version }}
+          files: KerstbusSync.exe
+          generate_release_notes: true
